# registry-cli

./: .gitignore  ADD_MODULE_COMMANDS.md  PARALLEL_USAGE.md  STUDENT_NUMBERS_FILE_FORMAT.md  debug_clearances.py  pyproject.toml  students_range_progress.json  test_add_module.py  test_cli.py  test_parse_module.py
.github/: copilot-instructions.md
examples/: grade_definitions_usage.py
registry_cli/: browser.py  grade_definitions.py  main.py
registry_cli/commands/approve/: academic_graduation.py  signups.py
registry_cli/commands/check/: __init__.py  email_notifications.py  prerequisites.py
registry_cli/commands/create/: certificate.py  certificates_bulk.py  student_semesters.py
registry_cli/commands/enroll/: add_module.py  approved.py  crawler.py  enrollment.py  student.py
registry_cli/commands/export/: __init__.py  graduating_students.py  graduation_clearance.py  registrations.py  students.py
registry_cli/commands/pull/: courses.py  module.py  modules.py  programs.py  schools.py  semesters.py  structures.py  student.py  student_modules.py  students.py  students_range.py  students_range_parallel.py
registry_cli/commands/push/: students.py  term_modules.py
registry_cli/commands/register/: all.py  approved.py  crawler.py  payloads.py  register.py
registry_cli/commands/send/: notifications.py  proof.py
registry_cli/db/: config.py
registry_cli/models/: __init__.py  course.py  program.py  structure.py  student.py
registry_cli/scrapers/: __init__.py  base.py  course.py  module.py  modules.py  program.py  schools.py  semester_module.py  structure.py  student.py
registry_cli/utils/: __init__.py  certificate_generator.py  email_sender.py  logging_config.py  pdf_generator.py  registration_notification.py
scripts/: build.py
(+22 files in other folders)
