[project]
name = "registry-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Ntholi Nkhatho",email = "ntholi@live.com"}
]
readme = "README.md"
requires-python = "<3.14,>=3.8"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry.scripts]
registry = "registry_cli.main:cli"
build = "scripts.build:main"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
