[tool.poetry]
name = "registry-cli"
version = "0.1.0"
description = ""
authors = ["Ntholi Nkhatho <ntholi@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.8"
click = "^8.1.8"
sqlalchemy-libsql = "^0.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
registry = "registry_cli.main:cli"
build = "scripts.build:main"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
